// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionList > Comment renders UserBlock content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-idZPaNd-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          name
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <span
          class="brd-c-eTYwxC"
        >
          <span
            class="brd-c-jmPTIj brd-c-jmPTIj-bwiKqY-size-sm"
          >
            @
            name
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders paragraph content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-idZPaNd-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          name
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <p>
          <span>
            text
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DiscussionList > Comment renders text content normally 1`] = `
<div>
  <div
    class="brd-c-knJJIL"
  >
    <span
      class="brd-c-cdJFWN brd-c-cdJFWN-hECRKn-shape-circle brd-c-cdJFWN-lhlSdI-size-sm brd-c-cdJFWN-idZPaNd-css"
    >
      <span>
        N
      </span>
    </span>
    <div
      class="brd-c-IzVos"
    >
      <div>
        <span
          class="brd-c-krDzCc"
        >
          name
        </span>
        <span
          class="brd-c-ckCQXG"
        >
          2022-06-17 16:50
        </span>
      </div>
      <div
        class="brd-c-fCQfsG"
      >
        <span>
          text
        </span>
      </div>
    </div>
  </div>
</div>
`;
